--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@calcom/embed-react": "^1.5.3",
     "@next/font": "^14.2.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^10.0.0-alpha.2",
     "@splinetool/react-spline": "^4.1.0",
     "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "framer-motion": "^12.34.3",
     "lenis": "^1.3.17",
     "lucide-react": "^0.575.0",
     "mongoose": "^9.2.2",
+    "motion": "^12.34.3",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^8.0.1",
@@ -30,6 +34,8 @@
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^3.5.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.183.1",
+    "three-globe": "^2.45.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
